fix position for header
It was overlapping the screen option buttons with relative position

--- a/src/resources/postcss/tickets-admin-tickets.pcss
+++ b/src/resources/postcss/tickets-admin-tickets.pcss
@@ -4,6 +4,10 @@
  * @since 5.14.0
  */
 .tec-admin-page--simple {
+	.tec-admin-page__header {
+		position: inherit;
+	}
+	
 	.tec-admin-page-content {
 		margin: 0;
 	}
